# paperclob-skill

./: README.md
mcp/: LICENSE  README.md  pyproject.toml
mcp/src/paperclob_mcp/: __init__.py  server.py
skills/polymarket-honest-sim/: SKILL.md  reference.md
