[project]
name = "paperclob-mcp"
version = "0.1.0"
description = "MCP server for PaperBook (paperclob.com) — Polymarket-compatible paper CLOB plus the honest simulator: recorded real tape, fillable-lens fills, founded verdicts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PaperBook" }]
keywords = [
    "mcp",
    "polymarket",
    "paper-trading",
    "backtesting",
    "prediction-markets",
    "trading-bot",
    "simulator",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["mcp>=1.2.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://paperclob.com"
Documentation = "https://paperclob.com/llms-full.txt"

[project.scripts]
paperclob-mcp = "paperclob_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperclob_mcp"]
